@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-11-23T16:06:54Z",
-  "count_outdated" : 685,
-  "uniques_outdated" : 149,
+  "timestamp" : "2022-11-24T00:34:39Z",
+  "count_outdated" : 696,
+  "uniques_outdated" : 150,
   "count" : 700,
   "uniques" : 154,
   "views" : [
-    {
-      "timestamp": "2022-11-09T00:00:00Z",
-      "count": 11,
-      "count_minmax": [ 11, 11 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-11-10T00:00:00Z",
       "count": 1,
